--- a/assignment-2-borsalaurentiu/SimpleMavenWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/assignment-2-borsalaurentiu/SimpleMavenWebApp/src/main/webapp/WEB-INF/web.xml
@@ -6,35 +6,49 @@
   <display-name>Archetype Created Web Application</display-name>
   
   <servlet>
-  	<servlet-name>HelloWorld</servlet-name>
-   	<servlet-class>HelloWorld</servlet-class>
+  	<servlet-name>ApplicationServlet</servlet-name>
+   	<servlet-class>ApplicationServlet</servlet-class>
   </servlet>
-
   <servlet-mapping>
-   <servlet-name>HelloWorld</servlet-name>
-   <url-pattern>/HelloWorld</url-pattern>
+   <servlet-name>ApplicationServlet</servlet-name>
+   <url-pattern>/ApplicationServlet</url-pattern>
   </servlet-mapping>
   
   <servlet>
-    <servlet-name>FirstServlet</servlet-name>
-    <servlet-class>FirstServlet</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>LoginServlet</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>WelcomeServlet</servlet-name>
-    <servlet-class>WelcomeServlet</servlet-class>
-  </servlet>
-
-
   <servlet-mapping>
-    <servlet-name>FirstServlet</servlet-name>
-    <url-pattern>/servlet1</url-pattern>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>WelcomeServlet</servlet-name>
-    <url-pattern>/servlet2</url-pattern>
-  </servlet-mapping>
- 
   
+  <servlet>
+    <servlet-name>NewAccountServlet</servlet-name>
+    <servlet-class>NewAccountServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NewAccountServlet</servlet-name>
+    <url-pattern>/NewAccountServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>BorrowServlet</servlet-name>
+    <servlet-class>BorrowServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>BorrowServlet</servlet-name>
+    <url-pattern>/BorrowServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+  
+    <servlet-name>ReturnServlet</servlet-name>
+    <servlet-class>ReturnServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReturnServlet</servlet-name>
+    <url-pattern>/ReturnServlet</url-pattern>
+  </servlet-mapping>
   
 </web-app>
 
